namespace Ofta.Domain.DocContext.DocAgg;

public interface IDocKey
{
    string DocId { get; }
}