namespace Ofta.Domain.DocContext.DocAgg;

public enum SignPositionEnum
{
    TopLeft, TopCenter, TopRight,
    BottomLeft, BottomCenter, BottomRight
}